--- a/heroesofpymoli/heroesofpymoli_jupyter.ipynb
+++ b/heroesofpymoli/heroesofpymoli_jupyter.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Dependencies and Setup\n",
+    "import pandas as pd\n",
+    "\n",
+    "# File to Load (Remember to Change These)\n",
+    "file_to_load = \"Resources/purchase_data.csv\"\n",
+    "\n",
+    "# Read Purchasing File and store into Pandas data frame\n",
+    "purchase_data = pd.read_csv(file_to_load)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
